# core-settings

core_settings/: Cargo.toml  build.rs  icons  ui-common
core_settings/src/: gui_fn.rs  main.rs
core_settings/src/gui_fn/: users.rs
core_settings/ui/: core-settings.slint  enumerations.slint
core_settings/ui/widgets/: oobe.slint  settings-menu.slint
core_settings/ui/widgets/oobe/: user-creation.slint  welcome.slint
core_settings/ui/widgets/settings-panels/: users.slint
core_settings/ui/widgets/settings-panels/users/: dialogs.slint  users.slint
libcoresettings/: Cargo.toml
libcoresettings/src/: users.rs
